# lez-private-multisig

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: SOLUTION-LP-0002.md  benchmarks.md  design.md
docs/evidence/: README.md  testnet.md
e2e_tests/: Cargo.toml
e2e_tests/examples/: verify_testnet_tx.rs
e2e_tests/src/: lib.rs
e2e_tests/tests/: e2e_lifecycle.rs  e2e_private_approve.rs
idl/: private_multisig_idl.json
idl-gen/: Cargo.toml
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
multisig_program/: Cargo.toml
multisig_program/src/: approve.rs  create_multisig.rs  execute.rs  init_vault.rs  lib.rs  propose.rs  reject.rs  test_support.rs
pms_core/: Cargo.toml
pms_core/src/: error.rs  lib.rs
scripts/: demo.sh
sdk/: Cargo.toml
sdk/examples/: bench_prove.rs
sdk/src/: lib.rs
